# gamevision

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  _CMakeLists.txt  memmap_watapico.ld
cc65/: Makefile  main.c  main.sv
src/: gb_cart.h  main.c  peanut_gb.h  watara_rom.h
src/sound/: minigb_apu.c
utils/: bin2c.py
